--- a/src/app/activities/activities.component.html
+++ b/src/app/activities/activities.component.html
@@ -6,8 +6,8 @@
         <div class="activities-page">
 
             <div class="information">
-                <div class="organization">
-                    <h1>ORGANIZATION NAME</h1>
+                <div class="organization-activity-header">
+                    <h1>NOMBRE DE LA  ORGANIZACION</h1>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                         labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
@@ -17,58 +17,77 @@
                     </p>
                 </div>
 
-                <h2>ACTIVITIES</h2>
+                <h2>ACTIVIDADES</h2>
 
                 <div class="organization-activities">
-                    <div class="activitie">
-                        <div class="activitie-header">
+                    <div class="activity">
+                        <div class="activity-header">
                             <h3>ACTIVITIE 1</h3>
                             <p>description...</p>
                         </div>
 
-                        <div class="activitie-footer">
+                        <div class="activity-footer">
                             <h4>MEMBERS: XX</h4>
                             <h4>GROUPS: XX</h4>
-                            <button>JOIN</button>
+                            <button>UNIRSE</button>
                         </div>
                         
                     </div>
 
-                    <div class="activitie">
-                        <div class="activitie-header">
+                    <div class="activity">
+                        <div class="activity-header">
                             <h3>ACTIVITIE 1</h3>
                             <p>description...</p>
                         </div>
 
-                        <div class="activitie-footer">
+                        <div class="activity-footer">
                             <h4>MEMBERS: XX</h4>
                             <h4>GROUPS: XX</h4>
-                            <button>JOIN</button>
+                            <button>UNIRSE</button>
                         </div>
                         
                     </div>
 
-                    <div class="activitie">
-                        <div class="activitie-header">
+                    <div class="activity">
+                        <div class="activity-header">
+                            <h3>ACTIVITIE 1</h3>
+                            <p>description...</p>
+                        </div>
+                        <div class="activity-footer">
+                            <h4>MEMBERS: XX</h4>
+                            <h4>GROUPS: XX</h4>
+                            <button>UNIRSE</button>
+                        </div>
+                    </div>
+                    <div class="activity">
+                        <div class="activity-header">
                             <h3>ACTIVITIE 1</h3>
                             <p>description...</p>
                         </div>
 
-                        <div class="activitie-footer">
+                        <div class="activity-footer">
                             <h4>MEMBERS: XX</h4>
                             <h4>GROUPS: XX</h4>
-                            <button>JOIN</button>
+                            <button>UNIRSE</button>
                         </div>
                         
                     </div>
                 </div>
                 <div class="schedule-button">
-                    <button>Create Schedule</button>
+                    <button>Generar Horario</button>
                 </div>
             </div>
 
             <div class="users">
-                <h1>USERS</h1>
+                <h1>USUARIOS</h1>
+                <div class="users-list">
+                    <ul>
+                        <li>Usuario 1</li>
+                        <li>Usuario 2</li>
+                        <li>Usuario 3</li>
+                    </ul>
+                </div>
+                
             </div>
         </div>
         <app-footer></app-footer>
