--- a/src/app/organizations/organizations.component.html
+++ b/src/app/organizations/organizations.component.html
@@ -10,150 +10,168 @@
                 <button>Filtrar <i class="fa fa-filter"></i></button>
             </div>
             <div class="grid-organizations">
-                <div class="organization">
-                    <div class="content-organization">
-                        <h1>Organizacion</h1>
-                        <h2>Descripcion</h2>
-                        <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                            Nullam non velit ut sapien fermentum fringilla. Sed pulvinar 
-                            ex vel nisi laoreet, at venenatis nibh blandit. Vestibulum ac 
-                            ligula in libero volutpat consequat. Nulla facilisi.
-                        </p>
-                        <p><strong>Miembros: </strong> XX</p>
-                        <p><strong>Actividades: </strong> XX</p>
+                <a href="/activities">
+                    <div class="organization">
+                        <div class="content-organization">
+                            <h1>Organizacion</h1>
+                            <h2>Descripcion</h2>
+                            <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                                Nullam non velit ut sapien fermentum fringilla. Sed pulvinar 
+                                ex vel nisi laoreet, at venenatis nibh blandit. Vestibulum ac 
+                                ligula in libero volutpat consequat. Nulla facilisi.
+                            </p>
+                            <p><strong>Miembros: </strong> XX</p>
+                            <p><strong>Actividades: </strong> XX</p>
+                        </div>
+                        <div class="img-organization">
+                            <img src="../../assets/img/icono_ULPGC.png" alt="">
+                        </div>
                     </div>
-                    <div class="img-organization">
-                        <img src="../../assets/img/icono_ULPGC.png" alt="">
+                </a>
+                <a href="/activities">
+                    <div class="organization">
+                        <div class="content-organization">
+                            <h1>Organizacion</h1>
+                            <h2>Descripcion</h2>
+                            <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                                Nullam non velit ut sapien fermentum fringilla. Sed pulvinar 
+                                ex vel nisi laoreet, at venenatis nibh blandit. Vestibulum ac 
+                                ligula in libero volutpat consequat. Nulla facilisi.
+                            </p>
+                            <p><strong>Miembros: </strong> XX</p>
+                            <p><strong>Actividades: </strong> XX</p>
+                        </div>
+                        <div class="img-organization">
+                            <img src="../../assets/img/icono_ULPGC.png" alt="">
+                        </div>
                     </div>
-                </div>
-                <div class="organization">
-                    <div class="content-organization">
-                        <h1>Organizacion</h1>
-                        <h2>Descripcion</h2>
-                        <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                            Nullam non velit ut sapien fermentum fringilla. Sed pulvinar 
-                            ex vel nisi laoreet, at venenatis nibh blandit. Vestibulum ac 
-                            ligula in libero volutpat consequat. Nulla facilisi.
-                        </p>
-                        <p><strong>Miembros: </strong> XX</p>
-                        <p><strong>Actividades: </strong> XX</p>
+                </a>
+                <a href="/activities">
+                    <div class="organization">
+                        <div class="content-organization">
+                            <h1>Organizacion</h1>
+                            <h2>Descripcion</h2>
+                            <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                                Nullam non velit ut sapien fermentum fringilla. Sed pulvinar 
+                                ex vel nisi laoreet, at venenatis nibh blandit. Vestibulum ac 
+                                ligula in libero volutpat consequat. Nulla facilisi.
+                            </p>
+                            <p><strong>Miembros: </strong> XX</p>
+                            <p><strong>Actividades: </strong> XX</p>
+                        </div>
+                        <div class="img-organization">
+                            <img src="../../assets/img/icono_ULPGC.png" alt="">
+                        </div>
                     </div>
-                    <div class="img-organization">
-                        <img src="../../assets/img/icono_ULPGC.png" alt="">
+                </a>
+                <a href="/activities">
+                    <div class="organization">
+                        <div class="content-organization">
+                            <h1>Organizacion</h1>
+                            <h2>Descripcion</h2>
+                            <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                                Nullam non velit ut sapien fermentum fringilla. Sed pulvinar 
+                                ex vel nisi laoreet, at venenatis nibh blandit. Vestibulum ac 
+                                ligula in libero volutpat consequat. Nulla facilisi.
+                            </p>
+                            <p><strong>Miembros: </strong> XX</p>
+                            <p><strong>Actividades: </strong> XX</p>
+                        </div>
+                        <div class="img-organization">
+                            <img src="../../assets/img/icono_ULPGC.png" alt="">
+                        </div>
                     </div>
-                </div>
-                <div class="organization">
-                    <div class="content-organization">
-                        <h1>Organizacion</h1>
-                        <h2>Descripcion</h2>
-                        <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                            Nullam non velit ut sapien fermentum fringilla. Sed pulvinar 
-                            ex vel nisi laoreet, at venenatis nibh blandit. Vestibulum ac 
-                            ligula in libero volutpat consequat. Nulla facilisi.
-                        </p>
-                        <p><strong>Miembros: </strong> XX</p>
-                        <p><strong>Actividades: </strong> XX</p>
+                </a>
+                <a href="/activities">
+                    <div class="organization">
+                        <div class="content-organization">
+                            <h1>Organizacion</h1>
+                            <h2>Descripcion</h2>
+                            <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                                Nullam non velit ut sapien fermentum fringilla. Sed pulvinar 
+                                ex vel nisi laoreet, at venenatis nibh blandit. Vestibulum ac 
+                                ligula in libero volutpat consequat. Nulla facilisi.
+                            </p>
+                            <p><strong>Miembros: </strong> XX</p>
+                            <p><strong>Actividades: </strong> XX</p>
+                        </div>
+                        <div class="img-organization">
+                            <img src="../../assets/img/icono_ULPGC.png" alt="">
+                        </div>
                     </div>
-                    <div class="img-organization">
-                        <img src="../../assets/img/icono_ULPGC.png" alt="">
+                </a>
+                <a href="/activities">
+                    <div class="organization">
+                        <div class="content-organization">
+                            <h1>Organizacion</h1>
+                            <h2>Descripcion</h2>
+                            <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                                Nullam non velit ut sapien fermentum fringilla. Sed pulvinar 
+                                ex vel nisi laoreet, at venenatis nibh blandit. Vestibulum ac 
+                                ligula in libero volutpat consequat. Nulla facilisi.
+                            </p>
+                            <p><strong>Miembros: </strong> XX</p>
+                            <p><strong>Actividades: </strong> XX</p>
+                        </div>
+                        <div class="img-organization">
+                            <img src="../../assets/img/icono_ULPGC.png" alt="">
+                        </div>
                     </div>
-                </div>
-                <div class="organization">
-                    <div class="content-organization">
-                        <h1>Organizacion</h1>
-                        <h2>Descripcion</h2>
-                        <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                            Nullam non velit ut sapien fermentum fringilla. Sed pulvinar 
-                            ex vel nisi laoreet, at venenatis nibh blandit. Vestibulum ac 
-                            ligula in libero volutpat consequat. Nulla facilisi.
-                        </p>
-                        <p><strong>Miembros: </strong> XX</p>
-                        <p><strong>Actividades: </strong> XX</p>
+                </a>
+                <a href="/activities">
+                    <div class="organization">
+                        <div class="content-organization">
+                            <h1>Organizacion</h1>
+                            <h2>Descripcion</h2>
+                            <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                                Nullam non velit ut sapien fermentum fringilla. Sed pulvinar 
+                                ex vel nisi laoreet, at venenatis nibh blandit. Vestibulum ac 
+                                ligula in libero volutpat consequat. Nulla facilisi.
+                            </p>
+                            <p><strong>Miembros: </strong> XX</p>
+                            <p><strong>Actividades: </strong> XX</p>
+                        </div>
+                        <div class="img-organization">
+                            <img src="../../assets/img/icono_ULPGC.png" alt="">
+                        </div>
                     </div>
-                    <div class="img-organization">
-                        <img src="../../assets/img/icono_ULPGC.png" alt="">
+                </a>
+                <a href="/activities">
+                    <div class="organization">
+                        <div class="content-organization">
+                            <h1>Organizacion</h1>
+                            <h2>Descripcion</h2>
+                            <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                                Nullam non velit ut sapien fermentum fringilla. Sed pulvinar 
+                                ex vel nisi laoreet, at venenatis nibh blandit. Vestibulum ac 
+                                ligula in libero volutpat consequat. Nulla facilisi.
+                            </p>
+                            <p><strong>Miembros: </strong> XX</p>
+                            <p><strong>Actividades: </strong> XX</p>
+                        </div>
+                        <div class="img-organization">
+                            <img src="../../assets/img/icono_ULPGC.png" alt="">
+                        </div>
                     </div>
-                </div>
-                <div class="organization">
-                    <div class="content-organization">
-                        <h1>Organizacion</h1>
-                        <h2>Descripcion</h2>
-                        <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                            Nullam non velit ut sapien fermentum fringilla. Sed pulvinar 
-                            ex vel nisi laoreet, at venenatis nibh blandit. Vestibulum ac 
-                            ligula in libero volutpat consequat. Nulla facilisi.
-                        </p>
-                        <p><strong>Miembros: </strong> XX</p>
-                        <p><strong>Actividades: </strong> XX</p>
+                </a>
+                <a href="/activities">
+                    <div class="organization">
+                        <div class="content-organization">
+                            <h1>Organizacion</h1>
+                            <h2>Descripcion</h2>
+                            <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                                Nullam non velit ut sapien fermentum fringilla. Sed pulvinar 
+                                ex vel nisi laoreet, at venenatis nibh blandit. Vestibulum ac 
+                                ligula in libero volutpat consequat. Nulla facilisi.
+                            </p>
+                            <p><strong>Miembros: </strong> XX</p>
+                            <p><strong>Actividades: </strong> XX</p>
+                        </div>
+                        <div class="img-organization">
+                            <img src="../../assets/img/icono_ULPGC.png" alt="">
+                        </div>
                     </div>
-                    <div class="img-organization">
-                        <img src="../../assets/img/icono_ULPGC.png" alt="">
-                    </div>
-                </div>
-                <div class="organization">
-                    <div class="content-organization">
-                        <h1>Organizacion</h1>
-                        <h2>Descripcion</h2>
-                        <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                            Nullam non velit ut sapien fermentum fringilla. Sed pulvinar 
-                            ex vel nisi laoreet, at venenatis nibh blandit. Vestibulum ac 
-                            ligula in libero volutpat consequat. Nulla facilisi.
-                        </p>
-                        <p><strong>Miembros: </strong> XX</p>
-                        <p><strong>Actividades: </strong> XX</p>
-                    </div>
-                    <div class="img-organization">
-                        <img src="../../assets/img/icono_ULPGC.png" alt="">
-                    </div>
-                </div>
-                <div class="organization">
-                    <div class="content-organization">
-                        <h1>Organizacion</h1>
-                        <h2>Descripcion</h2>
-                        <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                            Nullam non velit ut sapien fermentum fringilla. Sed pulvinar 
-                            ex vel nisi laoreet, at venenatis nibh blandit. Vestibulum ac 
-                            ligula in libero volutpat consequat. Nulla facilisi.
-                        </p>
-                        <p><strong>Miembros: </strong> XX</p>
-                        <p><strong>Actividades: </strong> XX</p>
-                    </div>
-                    <div class="img-organization">
-                        <img src="../../assets/img/icono_ULPGC.png" alt="">
-                    </div>
-                </div>
-                <div class="organization">
-                    <div class="content-organization">
-                        <h1>Organizacion</h1>
-                        <h2>Descripcion</h2>
-                        <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                            Nullam non velit ut sapien fermentum fringilla. Sed pulvinar 
-                            ex vel nisi laoreet, at venenatis nibh blandit. Vestibulum ac 
-                            ligula in libero volutpat consequat. Nulla facilisi.
-                        </p>
-                        <p><strong>Miembros: </strong> XX</p>
-                        <p><strong>Actividades: </strong> XX</p>
-                    </div>
-                    <div class="img-organization">
-                        <img src="../../assets/img/icono_ULPGC.png" alt="">
-                    </div>
-                </div>
-                <div class="organization">
-                    <div class="content-organization">
-                        <h1>Organizacion</h1>
-                        <h2>Descripcion</h2>
-                        <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                            Nullam non velit ut sapien fermentum fringilla. Sed pulvinar 
-                            ex vel nisi laoreet, at venenatis nibh blandit. Vestibulum ac 
-                            ligula in libero volutpat consequat. Nulla facilisi.
-                        </p>
-                        <p><strong>Miembros: </strong> XX</p>
-                        <p><strong>Actividades: </strong> XX</p>
-                    </div>
-                    <div class="img-organization">
-                        <img src="../../assets/img/icono_ULPGC.png" alt="">
-                    </div>
-                </div>
+                </a>
             </div>
         </div>
         <app-footer></app-footer>
