--- a/src/app/activities/activities.component.css
+++ b/src/app/activities/activities.component.css
@@ -24,7 +24,7 @@ h1 {
     color: #504136;
 }
 
-.organization {
+.organization-activity-header {
     margin-bottom: 30px;
     gap: 10px;
     display: flex;
@@ -33,7 +33,11 @@ h1 {
     align-items: center;
 }
 
-.organization p {
+.organization-activity-header h1 {
+    font-size: xx-large;
+}
+
+.organization-activity-header p {
     font-weight: 600;
     color: #504136;
 }
@@ -46,7 +50,7 @@ h1 {
     grid-auto-rows: 40vh;
 }
 
-.activitie {
+.activity {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -57,7 +61,7 @@ h1 {
     gap: 50px;
 }
 
-.activitie-header {
+.activity-header {
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -65,11 +69,11 @@ h1 {
     gap: 6px;
 }
 
-.activitie-header p {
+.activity-header p {
     align-self: flex-start;
 }
 
-.activitie-footer {
+.activity-footer {
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -77,17 +81,17 @@ h1 {
     gap: 4px;
 }
 
-.activitie-footer > *:not(:nth-child(3)){
+.activity-footer > *:not(:nth-child(3)){
     align-self: flex-start;
 }
 
-.activitie-footer button {
+.activity-footer button {
     margin-top: 12px;
     cursor: pointer;
     background-color: #504136;
     color: white;
     padding: 10px;
-    width: 90%;
+    width: 70%;
 }
 
 .schedule-button {
@@ -109,6 +113,19 @@ h1 {
 .users {
     flex: 1;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     background-color: #d3d0d0;
+    gap: 30px;
+}
+
+.users h1 {
+    font-size: x-large;
+    align-self: center;
+}
+
+.users-list {
+    padding: 10px;
+}
+.users-list ul li {
+    margin-bottom: 10px;
 }
