--- a/src/app/organizations/organizations.component.css
+++ b/src/app/organizations/organizations.component.css
@@ -53,7 +53,7 @@
     border-radius: 20px;
     max-width: 350px;
     position: relative;
-    z-index: -1;
+    cursor: pointer;
 }
 
 .img-organization {
