--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,7 +4,7 @@
         <a href ="/home">TIMIFY</a>
       </h1>
       <nav>
-        <a href="/schedules">Calendario</a>
+        <a href="/calendar">Calendario</a>
         <a href="">Horarios</a>
         <a href="/organizations">Organizaciones</a>
       </nav>
