--- a/src/app/admin-activities/admin-activities.component.html
+++ b/src/app/admin-activities/admin-activities.component.html
@@ -26,22 +26,22 @@
                             <div class="event-data">
                                 <p>Titulo</p>
                                 <div class="input-container">
-                                    <input type="text" name="" id=""  placeholder="ej.: Producción de Software">
-                                    <i class="fa fa-pencil"></i>
+                                  <input type="text" name="" id="noactive" #inputTitulo placeholder="ej.: Producción de Software" readonly>
+                                  <i class="fa fa-pencil" (click)="toggleEditMode(inputTitulo)"></i>
                                 </div>
-                            </div>
-                            <div class="event-data">
+                              </div>
+                              <div class="event-data">
                                 <p>Descripción</p>
                                 <div class="input-container">
-                                    <input type="text" name="" id=""  placeholder="ej.: ...">
-                                    <i class="fa fa-pencil"></i>
+                                  <input type="text" name="" id="noactive" #inputDescripcion placeholder="ej.: ..." readonly>
+                                  <i class="fa fa-pencil" (click)="toggleEditMode(inputDescripcion)"></i>
                                 </div>
-                            </div>
-                            <div class="event-data">
+                              </div>
+                              <div class="event-data">
                                 <p>Grupos</p>
                                 <div class="input-container">
-                                    <input type="email" name="" id=""  placeholder="ej.: Grupo 41, Grupo 42">
-                                    <i class="fa fa-pencil"></i>
+                                  <input type="email" name="" id="noactive" #inputGrupos placeholder="ej.: Grupo 41, Grupo 42" readonly>
+                                  <i class="fa fa-pencil" (click)="toggleEditMode(inputGrupos)"></i>
                                 </div>
                             </div>
                         </div>
