--- a/src/app/admin-organizations/admin-organizations.component.html
+++ b/src/app/admin-organizations/admin-organizations.component.html
@@ -20,42 +20,50 @@
                             <div class="event-data">
                                 <p>Titulo</p>
                                 <div class="input-container">
-                                    <input type="text" name="" id=""  placeholder="ej.: Producción de Software">
-                                    <i class="fa fa-pencil"></i>
+                                    <input type="text" name="" id="noactive" #inputTitulo placeholder="ej.: Producción de Software" readonly>
+                                    <i class="fa fa-pencil" (click)="toggleEditMode(inputTitulo)"></i>
                                 </div>
-                            </div>
+                                </div>
                             <div class="event-data">
                                 <p>Descripción</p>
                                 <div class="input-container">
-                                    <input type="text" name="" id=""  placeholder="ej.: ...">
-                                    <i class="fa fa-pencil"></i>
+                                    <input type="text" name="" id="noactive" #inputDescripcion placeholder="ej.: ..." readonly>
+                                    <i class="fa fa-pencil" (click)="toggleEditMode(inputDescripcion)"></i>
                                 </div>
                             </div>
                             <div class="event-data">
                                 <p>Correo electrónico</p>
                                 <div class="input-container">
-                                    <input type="email" name="" id=""  placeholder="ej.:pepito@gmail.com">
-                                    <i class="fa fa-pencil"></i>
+                                    <input type="email" name="" id="noactive"  #inputCorreo placeholder="ej.:pepito@gmail.com" readonly>
+                                    <i class="fa fa-pencil" (click)="toggleEditMode(inputCorreo)"></i>
                                 </div>
                             </div>
                             <div class="event-data">
                                 <p>Dominio</p>
                                 <div class="input-container">
-                                    <input type="url" name="" id=""  placeholder="ej.:timify.es">
-                                    <i class="fa fa-pencil"></i>
+                                    <input type="url" name="" id="noactive" #inputDominio placeholder="ej.:timify.es"  readonly>
+                                    <i class="fa fa-pencil" (click)="toggleEditMode(inputDominio)"></i>
                                 </div>
                             </div>
                             <div class="event-data">
                                 <p>Contacto</p>
                                 <div class="input-container">
-                                    <input type="text" name="" id=""  placeholder="ej.: +XX XXXXXXXXX">
-                                    <i class="fa fa-pencil"></i>
+                                    <input type="text" name="" id="noactive" #inputContacto placeholder="ej.: +XX XXXXXXXXX" readonly>
+                                    <i class="fa fa-pencil" (click)="toggleEditMode(inputContacto)"></i>
                                 </div>
                             </div>
                             <div class="event-data">
                                 <p>Privacidad</p>
-                                <select name="" id=""></select>
+                                <div class="input-container">
+                                    <select name="" id="noactive"  #selectPrivacidad disabled>
+                                        <option value="opcion1">Público</option>
+                                        <option value="opcion2">Estudiantes</option>
+                                        <option value="opcion3">Borja Sabe</option>
+                                    </select>
+                                    <i class="fa fa-pencil" (click)="toggleEditMode(selectPrivacidad)"></i>
+                                </div>
                             </div>
+                            
                         </div>
                     </div> 
                 </div>
