añadido popup editar (falta la llamada a la base de datos para editarlo)

--- a/src/app/add-reminder/add-reminder.component.html
+++ b/src/app/add-reminder/add-reminder.component.html
@@ -1,7 +1,7 @@
 <div class="add-reminder-container">
     <button (click)="closeAddReminderPopup()" class="close-button">X</button>
     <div class="input-title-container">
-        <input type="text" placeholder="Sin título" id="input-title">
+        <input type="text" placeholder="Sin título" id="input-title" [(ngModel)]="selectedTitle">
     </div>
     <div class="data-reminder-container">
         <div class="input-reminder">
@@ -10,11 +10,11 @@
         </div>
         <div class="input-reminder">
             <p>Fecha Límite:</p>
-            <input type="datetime-local" id="input-end-date">
+            <input type="datetime-local" [(ngModel)]="selectedDateEnd" id="input-end-date">
         </div>
         <div class="input-reminder">
             <p>Repetir:</p>
-            <select name="" id="input-repeat">
+            <select name="" id="input-repeat" [(ngModel)]="selectedRepeat">
                 <option value="Diario" selected>Diario</option>
                 <option value="Semanal" selected>Semanal</option>
                 <option value="Mensual" selected>Mensual</option>
@@ -24,7 +24,7 @@
         </div>
         <div class="input-reminder">
             <p>Color:</p>
-            <select name="" id="input-color">
+            <select name="" id="input-color" [(ngModel)]="selectedColor">
                 <option value="red" selected>Red</option>
                 <option value="blue" selected>Blue</option>
                 <option value="yellow" selected>Yellow</option>
@@ -36,7 +36,8 @@
         </div>
     </div>
     <div class="description-reminder-container">
-        <textarea id="input-description" placeholder="Descripción..."></textarea>
+        <textarea id="input-description" placeholder="Descripción..." [(ngModel)]="selectedDescription"></textarea>
     </div>
-    <button class="send-button" (click)="addReminder()">Añadir</button>
+    <button *ngIf="!recordatorio" class="send-button" (click)="addReminder()">Añadir</button>
+    <button *ngIf="recordatorio" class="send-button" (click)="updateReminder()">Editar</button>
 </div>
