--- a/src/app/calendar-page/calendar-page.component.html
+++ b/src/app/calendar-page/calendar-page.component.html
@@ -1,7 +1,7 @@
 <div>
     <app-login *ngIf="loginService.isOpen$ | async"></app-login>
     <app-register *ngIf="registerService.isOpen$ | async"></app-register>
-    <app-add-reminder *ngIf="addReminderService.isOpen$| async"></app-add-reminder>
+    <app-add-reminder *ngIf="addReminderService.isOpen$| async" [recordatorio]="recordatorioParaEditar"></app-add-reminder>
     <div id="wrapper-container" style="display: flex; flex-direction: column; min-height: 100vh;">
         <app-header></app-header>
         <div class="calendar-page-content">
@@ -26,7 +26,7 @@
             </div>
 
             <div class="calendar-container">
-                <app-calendar (addReminder)="addReminder($event)"></app-calendar>
+                <app-calendar (addReminder)="addReminder($event)" (editReminder)="editReminder($event)"></app-calendar>
             </div>
 
         </div>
