--- a/src/app/admin-add-event/admin-add-event.component.css
+++ b/src/app/admin-add-event/admin-add-event.component.css
@@ -82,11 +82,6 @@
     font-size: large;
 }
 
-.event-data input,select {
-    width: 60%;
-    height: 40px;
-}
-
 .input-container {
     display: flex;
     flex-direction: row;
@@ -114,4 +109,30 @@ button {
 
 i {
     cursor: pointer;
+}
+
+input {
+    border: none;
+    outline: none;
+    border-radius: 15px;
+    padding: 1em;
+    background-color: #ccc;
+    box-shadow: inset 2px 5px 10px rgba(0,0,0,0.3);
+    transition: 300ms ease-in-out;
+}
+
+input:focus {
+    background-color: white;
+    transform: scale(1.05);
+    box-shadow: 13px 13px 100px #969696,
+                -13px -13px 100px #ffffff;
+}
+
+select {
+    width: 100%;
+    padding: 8px 12px;
+    border: none;
+    font-size: 16px;
+    border-radius: 5px;
+    background-color: #ccc;
 }
