--- a/src/app/admin-create-organization/admin-create-organization.component.css
+++ b/src/app/admin-create-organization/admin-create-organization.component.css
@@ -91,7 +91,28 @@ button {
     padding: 15px 20px;
 }
 
-input, select {
+input {
+    border: none;
+    outline: none;
+    border-radius: 15px;
+    padding: 1em;
+    background-color: #ccc;
+    box-shadow: inset 2px 5px 10px rgba(0,0,0,0.3);
+    transition: 300ms ease-in-out;
+}
+
+input:focus {
+    background-color: white;
+    transform: scale(1.05);
+    box-shadow: 13px 13px 100px #969696,
+                -13px -13px 100px #ffffff;
+}
+
+select {
     width: 100%;
-    height: 40px;
+    padding: 8px 12px;
+    border: none;
+    font-size: 16px;
+    border-radius: 5px;
+    background-color: #ccc;
 }
