--- a/src/app/admin-groups/admin-groups.component.html
+++ b/src/app/admin-groups/admin-groups.component.html
@@ -29,22 +29,22 @@
                             <div class="event-data">
                                 <p>Titulo</p>
                                 <div class="input-container">
-                                    <input type="text" name="" id=""  placeholder="ej.: Producción de Software">
-                                    <i class="fa fa-pencil"></i>
+                                    <input type="text" name="" id="noactive" #inputTitulo placeholder="ej.: Producción de Software" readonly>
+                                    <i class="fa fa-pencil" (click)="toggleEditMode(inputTitulo)"></i>
                                 </div>
                             </div>
                             <div class="event-data">
                                 <p>Descripción</p>
                                 <div class="input-container">
-                                    <input type="text" name="" id=""  placeholder="ej.: ...">
-                                    <i class="fa fa-pencil"></i>
+                                    <input type="text" name="" id="noactive"  #inputDescripcion placeholder="ej.: ..." readonly>
+                                    <i class="fa fa-pencil" (click)="toggleEditMode(inputDescripcion)"></i>
                                 </div>
                             </div>
                             <div class="event-data">
                                 <p>Horario</p>
                                 <div class="input-container">
-                                    <input type="email" name="" id=""  placeholder="ej.: Lunes[8:30-10:30]">
-                                    <i class="fa fa-pencil"></i>
+                                    <input type="email" name="" id="noactive" #inputHorario placeholder="ej.: Lunes[8:30-10:30]" readonly> 
+                                    <i class="fa fa-pencil" (click)="toggleEditMode(inputHorario)"></i>
                                 </div>
                             </div>
                         </div>
