--- a/src/app/calendar/calendar.component.css
+++ b/src/app/calendar/calendar.component.css
@@ -195,9 +195,17 @@
     height: fit-content; 
     margin: 15px 0px;
     font-weight: 700;
-    cursor: pointer;
     justify-content: space-between;
     color: white;
+}
+
+.evento a{
+    cursor: pointer;
+    align-self: center;
+}
+
+.evento a:hover{
+    text-decoration: underline;
 }
 
 .evento-buttons {
