--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -24,11 +24,11 @@
                 <button class="dia-button" (click)="addReminderFunction({hora: hora, type: 'dia'})"><i class="fas fa-plus"></i></button>
               </div>
               <ng-container *ngFor="let evento of eventos">
-                <div class="evento" [style.background-color]="evento.color" *ngIf="seMuestraEvento(evento, hora, 'dia')">
-                  {{ evento.titulo }}
+                <div class="evento" [style.background-color]="evento.color" *ngIf="seMuestraEvento(evento, hora, 'dia', fechaActual.getDate())" (click)="showDetailsFunction(evento)">
+                  <a (click)="showDetailsFunction(evento)">{{ evento.titulo }}</a>
                   <div *ngIf="evento.tipo === 'recordatorio'" class="evento-buttons">
                     <button (click)="eliminarEvento(evento)"><i class="fas fa-trash"></i></button>
-                    <button (click)="cargarComponente(evento)"><i class="fas fa-pencil-alt"></i></button>
+                    <button (click)="editReminderFunction(evento)"><i class="fas fa-pencil-alt"></i></button>
                   </div>
                 </div>
               </ng-container>
@@ -48,11 +48,11 @@
               <div class="contenido">
                 <button class="dia-button" (click)="addReminderFunction({dia: i, hora: hora, type: 'semana'})"><i class="fas fa-plus"></i></button>
                 <ng-container *ngFor="let evento of eventos">
-                  <div class="evento" [style.background-color]="evento.color" *ngIf="seMuestraEvento(evento, hora, 'semana', i)">
-                    {{ evento.titulo }}
+                  <div class="evento" [style.background-color]="evento.color" *ngIf="seMuestraEvento(evento, hora, 'semana', diaDelMesEnSemanaActual(i))"> 
+                    <a (click)="showDetailsFunction(evento)">{{ evento.titulo }}</a>
                     <div *ngIf="evento.tipo === 'recordatorio'" class="evento-buttons">
                       <button (click)="eliminarEvento(evento)"><i class="fas fa-trash"></i></button>
-                      <button (click)="cargarComponente(evento)"><i class="fas fa-pencil-alt"></i></button>
+                      <button (click)="editReminderFunction(evento)"><i class="fas fa-pencil-alt"></i></button>
                     </div>
                   </div>
                 </ng-container>
@@ -72,10 +72,10 @@
             </div>
             <ng-container *ngFor="let evento of eventos">
               <div class="evento" [style.background-color]="evento.color" *ngIf="seMuestraEvento(evento, dia, 'mes')">
-                {{ evento.titulo }}
+                <a (click)="showDetailsFunction(evento)">{{ evento.titulo }}</a>
                 <div *ngIf="evento.tipo === 'recordatorio'" class="evento-buttons">
                   <button (click)="eliminarEvento(evento)"><i class="fas fa-trash"></i></button>
-                  <button (click)="cargarComponente(evento)"><i class="fas fa-pencil-alt"></i></button>
+                  <button (click)="editReminderFunction(evento)"><i class="fas fa-pencil-alt"></i></button>
                 </div>
               </div>
             </ng-container>
