--- a/src/app/manage-activities-pop-up/manage-activities-pop-up.component.html
+++ b/src/app/manage-activities-pop-up/manage-activities-pop-up.component.html
@@ -5,18 +5,18 @@
     <div class="manage-activities-content">
         <div class="manage-activities-name">
             <h4>Nombre: </h4>
-            <input type="text">
+            <input type="text" required>
         </div>
         <div class="manage-activities-privacy">
             <h4>Privacidad:</h4>
             <select name="" id="">
-                <option value="">Público</option>
-                <option value="">Privado</option>
+                <option value="" class="select_option">Público</option>
+                <option value="" class="select_option">Privado</option>
             </select>
         </div>
         <div class="manage-activities-description">
             <h4>Descripción:</h4>
-            <input type="text">
+            <textarea name="" id="" cols="30" rows="10"></textarea>
         </div>
     </div>
     <div class="manage-activities-add">
