--- a/src/app/admin-activities/admin-activities.component.html
+++ b/src/app/admin-activities/admin-activities.component.html
@@ -1,6 +1,7 @@
 <div>
     <app-login *ngIf="loginService.isOpen$ | async"></app-login>
     <app-register *ngIf="registerService.isOpen$ | async"></app-register>
+    <app-group-add-pop-up *ngIf="addGroup.isOpen$ | async"></app-group-add-pop-up>
     <app-manage-members-pop-up *ngIf="manageMembersService.isOpen$ | async"></app-manage-members-pop-up>
     <div id="wrapper-container" style="display: flex; flex-direction: column; min-height: 100vh;">
         <app-header></app-header>
@@ -48,7 +49,7 @@
                     </div>
                 </div>
                 <div class="buttons">
-                    <button>Crear Grupos</button>
+                    <button (click)="GroupAddPopup()">Crear Grupos</button>
                 </div>
             </div>
         </div>
