--- a/src/app/admin-buttons/admin-buttons.component.html
+++ b/src/app/admin-buttons/admin-buttons.component.html
@@ -1,17 +1,17 @@
 <div class="admin-buttons-container">
-    <div class="admin-option" id="active">
+    <div class="admin-option" id="admin_button_0">
         <a href="/admin">Añadir Evento</a>
     </div>
-    <div class="admin-option" id="noactive">
+    <div class="admin-option" id="admin_button_1">
         <a href="/adminCreateOrganization">Crear organización</a>
     </div>
-    <div class="admin-option" id="noactive">
+    <div class="admin-option" id="admin_button_2">
         <a href="/adminOrganizations">Gestionar organizaciones</a>
     </div>
-    <div class="admin-option" id="noactive">
+    <div class="admin-option"id="admin_button_3">
         <a href="/adminActivities">Gestionar actividades</a>
     </div>
-    <div class="admin-option" id="noactive">
+    <div class="admin-option"id="admin_button_4">
         <a href="/adminGroups">Gestionar grupos</a>
     </div>
 </div>
