Admin activities page updated for selection animation.

--- a/src/app/admin-activities/admin-activities.component.html
+++ b/src/app/admin-activities/admin-activities.component.html
@@ -10,7 +10,7 @@
             <h1>PLATAFORMA DE ADMINISTRACIÓN</h1>
             <div class="admin-activities-content-container">
                 <div class="content">
-                    <app-admin-buttons></app-admin-buttons>
+                    <app-admin-buttons [active]="active"></app-admin-buttons>
                     <div class="admin-content">
                         <div class="event-filter">
                             <div class="filter">
