Admin create organizations page updated for selection animation.

--- a/src/app/admin-create-organization/admin-create-organization.component.html
+++ b/src/app/admin-create-organization/admin-create-organization.component.html
@@ -9,7 +9,7 @@
             <h1>PLATAFORMA DE ADMINISTRACIÓN</h1>
             <div class="admin-organizations-content-container">
                 <div class="content">
-                    <app-admin-buttons></app-admin-buttons>
+                    <app-admin-buttons [active]="active"></app-admin-buttons>
                     <div class="admin-content">
                         <div class="header-admin-create-organizations-container">
                             <button (click)="manageMembers()">Gestionar miembros</button>
