--- a/src/app/event-details/event-details.component.html
+++ b/src/app/event-details/event-details.component.html
@@ -7,22 +7,36 @@
         <p id="input-description" disabled>{{ selectedDescription }}</p>
     </div>
 
-    <!-- <label for="start-date">Fecha de inicio:</label>
-    <input type="text" id="start-date" disabled [value]="startDate">
+    <div class="extra-details">
+        <label for="start-date">Fecha de inicio:</label>
+        <input type="text" id="start-date" disabled [value]="selectedDateStart">
+    </div>
 
-    <label for="end-date">Fecha de fin:</label>
-    <input type="text" id="end-date" disabled [value]="endDate">
+    <div class="extra-details">
+        <label for="end-date">Fecha de fin:</label>
+        <input type="text" id="end-date" disabled [value]="selectedDateEnd">
+    </div>
 
-    <label for="event-status">Estado del evento:</label>
-    <input type="text" id="event-status" disabled [value]="eventStatus">
-
-    <label for="attachments">Archivos adjuntos:</label>
-    <a href="{{attachmentUrl}}" download>Descargar</a>
-
-    <label for="event-group">Grupo:</label>
-    <input type="text" id="event-group" disabled [value]="eventGroup">
-
-    <label for="additional-notes">Notas adicionales:</label>
-    <textarea id="additional-notes" disabled [(ngModel)]="additionalNotes"></textarea> -->
+    <div *ngIf="detalles && detalles.tipo === 'evento'">
+        <div class="extra-details">
+            <label for="event-status">Estado del evento:</label>
+            <input type="text" id="event-status" disabled [value]="eventStatus">
+        </div>
+    
+        <div class="extra-details">
+            <label for="attachments">Archivos adjuntos:</label>
+            <a href="{{attachmentUrl}}" download>Descargar</a>
+        </div>
+    
+        <div class="extra-details">
+            <label for="event-group">Grupo:</label>
+            <input type="text" id="event-group" disabled [value]="eventGroup">
+        </div>
+    
+        <div class="extra-details">
+            <label for="additional-notes">Notas adicionales:</label>
+            <p id="additional-notes">{{additionalNotes}}</p>
+        </div>
+    </div>
 
 </div>
