Implemented front endpoint admin-add-event-data-collector.ts

--- a/src/app/admin-add-event/admin-add-event.component.html
+++ b/src/app/admin-add-event/admin-add-event.component.html
@@ -13,63 +13,63 @@
                         <div class="event-filter">
                             <div class="filter">
                                 <p><strong>ORGANIZACIONES</strong></p>
-                                <select name="" id=""></select>
+                                <select name="organizations" id=""></select>
                             </div>
                             <div class="filter">
                                 <p><strong>ACTIVIDADES</strong></p>
-                                <select name="" id=""></select>
+                                <select name="activities" id=""></select>
                             </div>
                             <div class="filter">
                                 <p><strong>GRUPOS</strong></p>
-                                <select name="" id=""></select>
+                                <select name="groups" id=""></select>
                             </div>
                         </div>
                         <div class="event-description">
                             <div class="event-data">
                                 <p>Grupos Añadidos</p>
-                                <input type="text" name="" id=""  placeholder="Escriba el id de los grupos">
+                                <input type="text" name="added-groups" id=""  placeholder="Escriba el id de los grupos">
                             </div>
                             <div class="event-data">
                                 <p>Titulo</p>
-                                <input type="text" name="" id=""  placeholder="ej.: Examen Asignatura">
+                                <input type="text" name="event-title" id=""  placeholder="ej.: Examen Asignatura">
                             </div>
                             <div class="event-data">
                                 <p>Descripción</p>
-                                <input type="text" name="" id=""  placeholder="ej.: ...">
+                                <input type="text" name="event-description" id=""  placeholder="ej.: ...">
                             </div>
                             <div class="event-data">
                                 <p>Inicio</p>
-                                <input type="text" name="" id=""  placeholder="ej.:XX/XX/XXXX/XX:XX">
+                                <input type="text" name="event-start-date" id=""  placeholder="ej.:XX/XX/XXXX/XX:XX">
                             </div>
                             <div class="event-data">
                                 <p>Final</p>
-                                <input type="text" name="" id=""  placeholder="ej.:XX/XX/XXXX/XX:XX">
+                                <input type="text" name="event-end-date" id=""  placeholder="ej.:XX/XX/XXXX/XX:XX">
                             </div>
                             <div class="event-data">
                                 <p>Ubicación</p>
-                                <input type="text" name="" id=""  placeholder="ej.: Facultad de Ingeniería. Lab2-2">
+                                <input type="text" name="event-location" id=""  placeholder="ej.: Facultad de Ingeniería. Lab2-2">
                             </div>
                             <div class="event-data">
                                 <p>Notas</p>
-                                <input type="text" name="" id=""  placeholder="ej.: Traer bolígrafo">
+                                <input type="text" name="event-notes" id=""  placeholder="ej.: Traer bolígrafo">
                             </div>
                             <div class="event-data">
                                 <p>Adjuntar fichero</p>
                                 <div class="input-container">
-                                    <input type="text" name="" id=""  placeholder="ej.: guiaExamen.pdf">
+                                    <input type="text" name="event-attached-files" id=""  placeholder="ej.: guiaExamen.pdf">
                                     <i class="fa fa-paperclip"></i>
                                 </div>
                             </div>
                             <div class="event-data">
                                 <p>Repetir</p>
-                                <select name="" id="">ej: Semanal</select>
+                                <select name="event-repeat" id="">ej: Semanal</select>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="buttons">
                     <button>Añadir Grupo</button>
-                    <button>Enviar</button>
+                    <button (click)="onAddGroupClick()">Enviar</button>
                 </div>
             </div>
         </div>
